fix(test): avoid Map.of in offload policies test
(cherry picked from commit fbc6a0faa9e8d6660fbe159a520171f6d3193adf)